infra/EKS/KUSTOMIZATION/base/14-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitaably-worker
  namespace: kitaably
spec:
  selector:
    matchLabels:
      app: kitaably-worker-label
  replicas: 1
  template:
    metadata:
      labels:
        app: kitaably-worker-label
    spec:
      containers:
      - name: kitaably-worker-container
        image: yashukun/kitaably-backend:latest
        args: [ "celery", "-A", "app.workers.celery_app.celery_app", "worker", "--loglevel=info", "--concurrency=2", "-Q", "ingest,proctor,maintenance" ]
        readinessProbe:
          exec:
            command: [ 'celery', '-A', 'app.workers.celery_app.celery_app', 'inspect', 'ping' ]
          initialDelaySeconds: 30
          periodSeconds: 120
          timeoutSeconds: 10
          failureThreshold: 3
