infra/EKS/KUSTOMIZATION/base/10-supabase-kong.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-kong
  namespace: kitaably
spec:
  selector:
    matchLabels:
      app: supabase-kong-label
  replicas: 1
  template:
    metadata:
      labels:
        app: supabase-kong-label
    spec:
      containers:
      - name: supabase-kong-container
        image: public.ecr.aws/supabase/kong:2.8.1
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        livenessProbe:
          exec:
            command: [ "kong", "health" ]
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: kong-config
          mountPath: /home/kong/kong.yml
          subPath: kong.yml
      volumes:
      - name: kong-config
        configMap:
          name: supabase-kong-config-2
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: supabase-kong-service
  namespace: kitaably
spec:
  selector:
    app: supabase-kong-label
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
