infra/EKS/KUSTOMIZATION/base/12-embeddings.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kitaably-embeddings
  namespace: kitaably
spec:
  selector:
    matchLabels:
      app: kitaably-embeddings-label # has to match .spec.template.metadata.labels
  serviceName: kitaably-embeddings-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kitaably-embeddings-label # has to match .spec.selector.matchLabels
    spec:
      securityContext:
        fsGroup: 1001 # match the container's GID
      containers:
      - name: kitaably-embeddings-container
        image: yashukun/kitaably-embeddings
        securityContext:
          runAsUser: 1001 # match the image's non-root user, if not baked in already
          runAsGroup: 1001
        startupProbe:
          httpGet:
            path: /health
            port: 8001
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8001
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: model-cache
          mountPath: /app/.cache
  volumeClaimTemplates:
  - metadata:
      name: model-cache
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kitaably-embeddings-service
  namespace: kitaably
spec:
  selector:
    app: kitaably-embeddings-label
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
