infra/EKS/KUSTOMIZATION/base/13-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitaably-backend
  namespace: kitaably
spec:
  selector:
    matchLabels:
      app: kitaably-backend-label
  replicas: 1
  template:
    metadata:
      labels:
        app: kitaably-backend-label
    spec:
      containers:
      - name: kitaably-backend-container
        image: yashukun/kitaably-backend:latest
        command: [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000" ]
        ports:
        - containerPort: 8000
        livenessProbe:
          exec:
            command: [ 'python', '-c', "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" ]
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kitaably-backend-service
  namespace: kitaably
spec:
  selector:
    app: kitaably-backend-label
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
