infra/EKS/KUSTOMIZATION/base/2-supabase-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supabase-db
  namespace: kitaably
spec:
  selector:
    matchLabels:
      app: supabase-db-selector # has to match .spec.template.metadata.labels
  serviceName: "supabase-db-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: supabase-db-selector # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: supabase-db-container
        image: public.ecr.aws/supabase/postgres:17.6.1.159
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: supabase-db-volume
          mountPath: /var/lib/postgresql
        - name: init-sql
          mountPath: docker-entrypoint-initdb.d/z-kitaably-init.sql
          subPath: z-kitaably-init.sql

        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          exec:
            command: [ "sh", "-c", "pg_isready -U supabase_admin -d postgres -h 127.0.0.1" ]
          initialDelaySeconds: 5
          periodSeconds: 5

      volumes:
      - name: init-sql
        configMap:
          name: supabase-db-init

  volumeClaimTemplates:
  - metadata:
      name: supabase-db-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: supabase-db-service
  namespace: kitaably
spec:
  selector:
    app: supabase-db-selector
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
