infra/EKS/KUSTOMIZATION/base/8-supabase-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-auth
  namespace: kitaably
spec:
  selector:
    matchLabels:
      app: supabase-auth-label
  replicas: 1
  template:
    metadata:
      labels:
        app: supabase-auth-label
    spec:
      containers:
      - name: supabase-auth-container
        image: public.ecr.aws/supabase/gotrue:v2.195.0
        readinessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command: [ "sh", "-c", "wget --quiet --tries=1 --spider http://127.0.0.1:9999/health || exit 1" ]
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 9999
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: supabase-auth-service
  namespace: kitaably
spec:
  selector:
    app: supabase-auth-label
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 9999
    targetPort: 9999
